<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#67bd4d"
    tools:context=".BioActivitiy">


    <Button
        android:id="@+id/buttonRegfinish"
        android:layout_width="104dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="81dp"
        android:text="@string/regNext"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonCalcBMI"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="16dp"
        android:text="@string/calcBMI"
        app:backgroundTint="#2196F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editWeight" />

    <TextView
        android:id="@+id/editActivityLevel6"
        android:layout_width="279dp"
        android:layout_height="42dp"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:layout_marginBottom="80dp"
        android:background="@color/white"
        android:gravity="top|left"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegfinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="279dp"
        android:layout_height="42dp"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:background="@color/white"
        android:gravity="top|left"
        android:hint="Enter your weight..."
        android:textColorHint="@color/grey"
        android:inputType="numberDecimal"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHeight" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:gravity="center"
        android:text="@string/regBio"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="279dp"
        android:layout_height="42dp"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:background="@color/white"
        android:gravity="top|left"
        android:hint="Enter your height in inches..."
        android:textColorHint="@color/grey"
        android:inputType="numberDecimal"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginLeft="142dp"
        android:layout_marginEnd="142dp"
        android:layout_marginRight="142dp"
        android:layout_marginBottom="10dp"
        android:text="Rough BMI Estimate"
        app:layout_constraintBottom_toTopOf="@+id/editActivityLevel6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="86dp"
        android:layout_height="87dp"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="163dp"
        android:layout_marginRight="163dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/confused" />
</androidx.constraintlayout.widget.ConstraintLayout>